assets/css/style.scss
---
---

@import 'jekyll-theme-cayman';

.project-tagline {
    margin-bottom: 0;
}

.page-header {
    padding: 2rem;
}

.page-title {
    display: flex;
    align-items: center;
    margin: 0 auto;
    justify-content: center;
}

.nav-buttons {
    .btn {
        margin-bottom: 0;
    }
}

.linkedin {
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
    .logo-container {
        padding-top: 0.5rem;
        text-align: center;

        .logo {
            width: 100px;
            border-radius: 10px;
        }
    }

    .nav-buttons {
        .btn {
            width: unset;
            display: inline-block;
            //padding: none;
        }
    }
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
    .logo-container {
        padding-top: 0.5rem;
        padding-left: 1rem;

        .logo {
            width: 150px;
            border-radius: 10px;
        }
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
}

